[gd_scene load_steps=12 format=2]

[ext_resource path="res://art/Asteroid 01_png_processed.png" type="Texture" id=1]
[ext_resource path="res://art/Asteroid 02_png_processed.png" type="Texture" id=2]
[ext_resource path="res://art/Asteroid 03_png_processed.png" type="Texture" id=3]
[ext_resource path="res://art/Asteroid 04_png_processed.png" type="Texture" id=4]
[ext_resource path="res://Asteroid.gd" type="Script" id=5]
[ext_resource path="res://art/Explosion01_Frame_08_png_processed.png" type="Texture" id=6]
[ext_resource path="res://art/Explosion01_Frame_09_png_processed.png" type="Texture" id=7]
[ext_resource path="res://art/Explosion01_Frame_06_png_processed.png" type="Texture" id=8]
[ext_resource path="res://art/Explosion01_Frame_07_png_processed.png" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "A1",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "A2",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "A3",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "A4",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 7 ), null ],
"loop": false,
"name": "Explotion",
"speed": 16.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 13.0384

[node name="Asteroid" type="KinematicBody2D" groups=["Enemy", "asteroids"]]
collision_mask = 0
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 1.5 )
scale = Vector2( 1, 0.892857 )
frames = SubResource( 1 )
animation = "Explotion"
frame = 4
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="ExplotionTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="ExplotionTimer" to="." method="_on_ExplotionTimer_timeout"]
